<resources>
    <string name="app_name">AndroidFundamentalsGroup1</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="search_for_names">Search for names</string>
    <string name="our_first_textview">Our first TextView</string>
    <string name="i_am_a_button">I am a button</string>
    <string name="full_name">Full name</string>
    <string name="a_accept_t_and_c">A accept T and C</string>
    <string name="first_text">first text</string>
    <string name="second_text">second text</string>
    <string name="new_text">This is the new text</string>
    <string name="default_full_name">Magda Miu</string>
    <string name="checkbox_checked">Checkbox was checked</string>
    <string name="checkbox_unchecked">Checkbox was unchecked</string>
    <string name="checkbox_state_checked">Checkbox checked</string>
    <string name="checkbox_state_unchecked">Checkbox unchecked</string>
    <string name="error_missing_text">Please add some text</string>
    <string name="top_long_text">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets. Android is developed by a consortium of developers known as the Open Handset Alliance and commercially sponsored by Google. It was unveiled in November 2007, with the first commercial Android device launched in September 2008.  It is free and open source software; its source code is known as Android Open Source Project (AOSP), which is primarily licensed under the Apache License. However most Android devices ship with additional proprietary software pre-installed,[10] most notably Google Mobile Services (GMS)[11] which includes core apps such as Google Chrome, the digital distribution platform Google Play and associated Google Play Services development platform. About 70 percent of Android smartphones run Google\'s ecosystem;[12] competing Android ecosystems and forks include Fire OS (developed by Amazon) or LineageOS. However the \"Android\" name and logo are trademarks of Google which impose standards to restrict \"uncertified\" devices outside their ecosystem to use Android branding</string>
    <string name="bottom_long_text">The source code has been used to develop variants of Android on a range of other electronics, such as game consoles, digital cameras, portable media players, PCs and others, each with a specialized user interface. Some well known derivatives include Android TV for televisions and Wear OS for wearables, both developed by Google. Software packages on Android, which use the APK format, are generally distributed through proprietary application stores like Google Play Store, Samsung Galaxy Store, and Huawei AppGallery, or open source platforms like Aptoide or F-Droid.  Android has been the best-selling OS worldwide on smartphones since 2011 and on tablets since 2013. As of May 2017, it has over two billion monthly active users, the largest installed base of any operating system, and as of August 2020, the Google Play Store features over 3 million apps.[15] The current stable version is Android 11, released on September 8, 2020.</string>
    <string name="select_an_android_version">Select an Android version</string>
    <string name="textview">TextView</string>
    <string name="hello_world">Hello World!</string>
    <string name="open_second_activity">Open Second Activity</string>
    <string name="hello_message">hello from first activity</string>
    <string name="button_for_startactivityforresult">Button for startActivityForResult</string>
    <string name="write_a_message_here">Write a message here...</string>
    <string name="error_missing_message">Please add some text here...</string>
    <string name="open_form_activity">Open Form Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_activity">You are in the first Activity, press the buuton to launch the second one</string>
    <string name="click_me">Click me</string>
    <string name="second_activity">You are now in the Second Activity.</string>
    <string name="text_one">Text One</string>
    <string name="text_two">Text Two</string>
    <string name="text_three">Text Three</string>
    <string name="button_text_one">Engineering is the use of scientific principles to design and build machines, structures, and other items, including bridges, tunnels, roads, vehicles, and buildings. The discipline of engineering encompasses a broad range of more specialized fields of engineering, each with a more specific emphasis on particular areas of applied mathematics, applied science, and types of application. See glossary of engineering.
The term engineering is derived from the Latin ingenium, meaning "cleverness" and ingeniare, meaning "to contrive, devise".</string>
    <string name="button_text_two">Engineering has existed since ancient times, when humans devised inventions such as the wedge, lever, wheel and pulley, etc.

The term engineering is derived from the word engineer, which itself dates back to the 14th century when an engineer (literally, one who builds or operates a siege engine) referred to "a constructor of military engines." In this context, now obsolete, an "engine" referred to a military machine, i.e., a mechanical contraption used in war (for example, a catapult). Notable examples of the obsolete usage which have survived to the present day are military engineering corps, e.g., the U.S. Army Corps of Engineers.

The word "engine" itself is of even older origin, ultimately deriving from the Latin ingenium (c. 1250), meaning "innate quality, especially mental power, hence a clever invention."

Later, as the design of civilian structures, such as bridges and buildings, matured as a technical discipline, the term civil engineering[5] entered the lexicon as a way to distinguish between those specializing in the construction of such non-military projects and those involved in the discipline of military engineering.</string>
    <string name="button_text_three">Interdisciplinary engineering draws from more than one of the principle branches of the practice. Historically, naval engineering and mining engineering were major branches. Other engineering fields are manufacturing engineering, acoustical engineering, corrosion engineering, instrumentation and control, aerospace, automotive, computer, electronic, information engineering, petroleum, environmental, systems, audio, software, architectural, agricultural, biosystems, biomedical,[70] geological, textile, industrial, materials,and nuclear engineering. These and other branches of engineering are represented in the 36 licensed member institutions of the UK Engineering Council.

New specialties sometimes combine with the traditional fields and form new branches – for example, Earth systems engineering and management involves a wide range of subject areas including engineering studies, environmental science, engineering ethics and philosophy of engineering.</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="reply_received">Reply received</string>
    <string name="message_received">Message received</string>
    <string name="error_message_text_empty">Put text here</string>
    <string name="error_not_a_number">Please add a numeric value</string>
    <string name="sum_result">\"The sum is = \"</string>
    <string name="open_sum_activity">Open Sum Activity</string>
    <string name="sum_with_bundle">Sum with Bundle</string>
    <string name="sum_with_method_setter">Sum with Method (setter)</string>
    <string name="result_sum_from_fragment">\"Sum of the numbers received from fragment = \"</string>
    <string name="send_numbers_to_activity">Send numbers to Activity</string>
    <string name="second_number">Second number</string>
    <string name="first_number">First number</string>
    <string name="back_button_pressed">Back button was pressed</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_navigation_drawer_activity">Open Navigation Drawer Activity</string>
    <string name="first_text_in_a_card_view">first text in a cardview</string>
    <string name="second_text_in_a_card_view">Second text in a cardview</string>
    <string name="third_text_in_a_card_view">Third  text in a cardview</string>
    <string name="open_style_activity">Open Style Activity</string>
    <string name="forth_text_in_a_card_view">A new text, the 4th one...</string>
    <string name="new_text_in_card">This is the 5th text here...</string>
</resources>
