<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- comment -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="@dimen/small_margin"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:padding="@dimen/small_padding"
        android:text="@string/our_first_textview"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_font_size"
        android:textStyle="italic|bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="center"
        android:src="@drawable/android" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:background="@color/colorAccent"
        android:padding="@dimen/small_padding"
        android:text="@string/i_am_a_button"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_dimension"
        android:background="@color/colorPrimary" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textCapWords" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/a_accept_t_and_c" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/yes" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
    </RadioGroup>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:stepSize="1" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/wi_fi" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="70" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_for_names" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>