<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/large_space"
    tools:context=".fragments.NumbersFragment">

    <EditText
        android:id="@+id/editTextFirstNumberFromFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextSecondNumberFromFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSendNumbersToActivityOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_numbers_to_activity" />

</LinearLayout>